--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
 workflows:
   build-and-test:
     jobs:
-      - test-java
+    #  - test-java
     # - deploy:
     #     requires:
     #       - test-java
